Adicionado o endereco do site

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
     </div>
 </section>
 
+<footer>
+    <a href="http://www.silvaleonardo.com">www.silvaleonardo.com</a>
+</footer>
+
 <script src="js/controller.js"></script>
 
 </body>
